adicionando novos parâmetros a criação + ajuste no swagger
